--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,208 @@
     font-family: 'Montserrat', sans-serif;
 }
 
-/*UTILITIES*/
+.evidence{
+    color: white;
+}
+
+.download{
+    color: #7d7d7d;
+}
+
+.jd{
+    margin-top: 15px;
+}
+
+@media screen and (min-width: 1100px) {}
+
+body{
+    display: flex;
+    flex-direction: column;
+}
+
+section{
+    display: flex;
+    flex-direction: row;
+}
+
+aside{
+    display: flex;
+    flex-direction: column;
+    width: 400px;
+    height: calc(100vh - 80px);
+    justify-content: space-between;
+    background-color:#000000 ;
+}
+
+.home{
+    width: 100%;;
+}
+
+.logo{
+    margin-bottom: 30px;
+}
+
+.navigation{
+    margin-bottom: 30px;
+    font-size: 24px;
+    margin-left: 15px;
+    color: #7d7d7d;
+
+}
+
+.navigation ul{
+    list-style: none;
+}
+
+.navigation ul li{
+    margin-bottom: 15px;
+}
+
+.create{
+    color: #7d7d7d;
+}
+
+.profile ul{
+    width: 90%;
+    margin-left: 15px;
+    font-size: 24px;
+    list-style: none;
+    margin-bottom: 10px;
+}
+
+.profile ul li{
+    margin-bottom: 15px;
+}
+.ico{
+    font-size: 60px;
+    vertical-align: middle;
+}
+
+.create ul li{
+    margin-bottom: 15px;
+}
+.home img{
+    vertical-align: middle;
+    width: 300px;
+    margin-top: 10px;
+    margin-left: 10px;
+}
+
+.profile{
+    width: 100%;
+}
+
+.bar{
+    position: fixed;
+    height: 50px;
+    width: calc(100vw - 400px);
+    text-align: right;
+    background-color: #080b12;
+}
+
+button{
+    margin-top: 14px;
+    padding-top: 2px;
+    padding-bottom: 2px;
+    padding-left: 30px;
+    padding-right: 30px;
+    border-radius: 40px;
+}
+
+.container{
+    display: flex;
+}
+
+.album{
+    margin-top: 50px;
+    display: flex;
+    overflow-y: scroll;
+    width: calc(100vw - 400px);
+    background-color: #141922;
+    flex-wrap: wrap;
+    align-items: flex-start;
+    flex-direction: column;
+}
+
+.navbar{
+    width: 100%;
+    height: 20px;
+    font-size: 18px;
+    margin-top: 5px;
+    color: #7d7d7d;
+}
+
+.navbar ul{
+    margin-top: 4px;
+    text-align: center;
+    list-style: none;
+}
+
+.navbar ul li{
+    display: inline;
+    margin-right: 10px;
+}
+
+.title{
+    width: 100%;
+    margin-top: 15px;
+    margin-left: 20px;
+    color: white;
+    font-size: 30px;
+}
+
+.box-item{
+    display: flex;
+    width: 100%;
+    flex-direction: row;
+    justify-content: space-evenly;
+    margin-top: 10px;
+}
+
+.box{
+    width: 100px;
+    height: 100px;
+    margin-right: 5px;
+    margin-top: 10px;
+    background-color: rebeccapurple;
+}
+
+footer{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100%;
+    height: 80px;
+    margin-bottom: 0;
+    background-color: fuchsia;
+}
+
+footer div{
+    background-color: springgreen;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*
+
+
+
 .evidence{
     color: white;
 }
@@ -30,7 +231,7 @@
     vertical-align: middle;
 }
 
-/*SIDEBAR*/
+
 
 body{
     display: flex;
@@ -58,7 +259,7 @@ section .logo{
     width: 30px;
 }
 
-/*NAVIGATION*/
+
 .navbar{
     position: fixed;
     width: calc(100% - 400px);
@@ -79,7 +280,7 @@ button{
     background-color: red;
 }
 
-/*FOOTER*/
+
 footer{
     display: flex;
     position: fixed;
@@ -110,3 +311,5 @@ footer{
     font-size: 40px;
     margin-right: 25px;
 }
+
+*/
